# hugomgmt

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pytest.ini  requirements-ext.txt  requirements.txt  setup.cfg
.github/workflows/: branch.yml  main.yml  tag.yml
data/isso/: isso.conf
data/nginx/: default.conf
data/shell/: entrypoint.sh  tutorial.sh
docker/isso/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf.patch
hugomgmt/: hugo.py  isso.py  main.py  openwebui.py  shortcode.py  shortcode_audio.py  shortcode_csv.py  shortcode_ignore.py  shortcode_raw.py  shortcode_tex.py  staticsite.py  util.py  wordpress.py
hugomgmt/template/: multi-comment.mail.j2  post-shortcode.md.j2  post-toml.md.j2  post.md.j2  single-comment.mail.j2
tests/: test_hugo.py  test_isso.py  test_owui.py  test_static.py  test_wp.py
