[metadata]
name = hugomgmt
version = attr: hugomgmt.version.VERSION
url = https://github.com/wtnb75/hugomgmt
author = Watanabe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = hugo static site management
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Documentation
  Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:

[options.entry_points]
console_scripts =
  hugomgmt=hugomgmt.main:main

[options.package_data]
hugomgmt =
  template/*.j2
